crates/citeproc/tests/snapshots/suite__bugreports_AccidentalAllCaps.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
J. Doe, <i>His Anonymous Life</i>, 1965.
