crates/citeproc/tests/snapshots/suite__bugreports_NoCaseEscape.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
<div class="csl-bib-body">
<div class="csl-entry">
<div class="csl-block">Aalto, Alan</div>
<div class="csl-left-margin">N.d.</div>
<div class="csl-right-inline">“‘PIAAC-Longitudinal (PIAAC-L) 2015.’”</div>
</div>
<div class="csl-entry">
<div class="csl-left-margin">N.d.</div>
<div class="csl-right-inline">“PIAAC-Longitudinal (PIAAC-Lx) 2015.”</div>
</div>
</div>
