crates/citeproc/tests/snapshots/suite__bugreports_NonBreakingSpaceJoinFail.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
[0] {\scaps Smith} J., {\i Book One}\uc0\u160 ; {\scaps Jackson} J., {\i Book Two}.

