crates/citeproc/tests/snapshots/suite__bugreports_SingleQuote.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
<div class="csl-bib-body">
<div class="csl-entry">
<div class="csl-left-margin">[1]</div>
<div class="csl-right-inline">“production d ' eau glacée à condensation à eau avec récupération de chaleur . Modélisation simplifiée dans l ' optique d ' un calcul des consommations d ' énergie d ' une insta.”</div>
</div>
</div>
