crates/citeproc/tests/snapshots/suite__bugreports_SingleQuoteXml.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
[Cite with a composer ; O A. “hello” <i>Book Title</i>]
