crates/citeproc/tests/snapshots/suite__bugreports_SmallCapsEscape.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
<div class="csl-bib-body">
<div class="csl-entry">
<div class="csl-block">Aalto, Alan</div>
<div class="csl-left-margin">N.d.</div>
<div class="csl-right-inline"><span style="font-variant:small-caps;">Here</span>.</div>
</div>
</div>
