crates/citeproc/tests/snapshots/suite__discretionary_AuthorOnly.txt.snap
---
source: crates/citeproc/tests/suite.rs
expression: res
---
John Smith
(Robert Jones, 2002)
Book C
(2004, [Susan Jenkins tran.])
Book E
